# arxiv-curie

./: README.md  pyproject.toml
arxiv-curie/: cli.py
arxiv-curie/curie/: core.py
curie/: base.py  cli.py  core.py
curie/cleaners/: base.py  nltk.py
curie/curie/: __init__.py  core.py
curie/curie/cleaners/: base.py  nltk.py
curie/curie/embedders/: base.py  w2v.py
curie/curie/loaders/: arxiv.py  base.py  offline.py
curie/curie/models/: ac.py  base.py
curie/curie/summarizers/: base.py
curie/embedders/: base.py  w2v.py
curie/loaders/: arxiv.py  base.py  offline.py
curie/loaders/tests/: test_arxiv.py
curie/models/: ac.py  base.py
curie/models/tests/: test_ac.py
