[tool.poetry]
name = "arxiv-curie"
version = "0.1.0"
description = "Automated, machine learning driven scientific paper summarizer"
authors = ["Kelvin Lee <kin.long.kelvin.lee@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
scikit-learn = "^0.23.1"
nltk = "^3.5"
arxiv = "^0.5.3"
gensim = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
